--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 @tailwind utilities;
 
 :root {
+  margin-top: -35px;
+  margin-bottom: -35px;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -22,16 +24,45 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
 body {
+  font-family: "Anton SC", sans-serif;
   margin: 0;
+  padding: 0;
   display: flex;
   place-items: center;
+  flex-direction: column;
   min-width: 320px;
   min-height: 100vh;
+  background-image: url("/src/assets/images/paper.jpg"); /* Ruta correcta de la imagen */
+  background-size: cover; /* La imagen cubre toda la pantalla */
+  background-position: center; /* Centra la imagen */
+  background-repeat: no-repeat; /* No se repite la imagen */
+  justify-content: center;
+  color: rgba(255, 255, 255, 0.87);
+}
+
+.main-container {
+  width: 1000px;
+  max-width: 100%; /* Controla el tamaño máximo de la "hoja" */
+  min-height: 100%; /* Asegura que el contenedor ocupe toda la altura */
+  height: 100vh; /* Ocupa toda la altura disponible */
+  padding: 0px;
+  margin: 0; /* Sin márgenes alrededor */
+  margin-bottom: -21px; /* Ajuste según sea necesario */
+  display: flex;
+  flex-direction: column; /* Los elementos dentro estarán apilados verticalmente */
+  justify-content: center; /* Centra el contenido verticalmente */
+
+  /* Fondo consistente con la imagen */
+  background-image: inherit; /* Hereda la imagen de fondo del body */
+  background-size: cover; /* La imagen cubre toda el área */
+  background-position: center; /* Centra la imagen */
+  background-repeat: no-repeat; /* Evita que la imagen se repita */
 }
 
 h1 {
@@ -50,9 +81,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
