--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,6 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Anton+SC&family=Cabin+Sketch:wght@400;700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Anton+SC&family=Cabin+Sketch:wght@400;700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto&display=swap");
 
-/* Contenedor principal del header */
 #headerMe {
   margin: 50px;
   display: flex;
@@ -74,4 +73,9 @@
 .titulo-3d:hover {
   transform: translateZ(20px);
   color: #c8c8c8;
+} */
+
+.imageFrontened {
+  width: 100%;
+  background-image: url("../assets/images/sg.svg");
 }
