--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,11 @@ body {
   display: flex;
   justify-content: center;
   /* align-items: center; */
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
+  background-image: url("/public/fondo/fondo.png");
+  background-size: cover; /* Hace que la imagen cubra todo el área visible */
+  background-position: center; /* Centra la imagen */
+  background-repeat: no-repeat; /* Evita repeticiones */
   min-height: 100vh;
   color: rgba(255, 255, 255, 0.87);
 }
