--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,8 @@ body {
   justify-content: center;
   /* align-items: center; */
   /* background-color: #ffffff; */
-  background-image: url("/public/fondo/fondo2.png");
+  background-image: url("/public/fondo/fondo.svg");
+  /* background-image: url("/public/fondo/fondo2.png"); */
   background-size: cover; /* Hace que la imagen cubra todo el área visible */
   background-position: center; /* Centra la imagen */
   background-repeat: no-repeat; /* Evita repeticiones */
