skills, background, etc

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,6 +1,6 @@
 .imageFrontened {
   width: 100%;
-  background-image: url(`${import.meta.env.BASE_URL}pixelcut-export.png`);
+  /* background-image: url(`${import.meta.env.BASE_URL}pixelcut-export.png`); */
 }
 
 .button-arrow {
